
    MAPREDUCE-6078. native-task: fix gtest build on macosx (Binglin Chang)

    MAPREDUCE-5801. Uber mode's log message is missing a vcore reason
    (Steven Wong via aw)

    MAPREDUCE-6525. Fix test failure of TestMiniMRClientCluster.testRestart.
    (Masatake Iwasaki via aajisaka)

Release 2.9.0 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

Release 2.8.0 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

    MAPREDUCE-6284. Add Task Attempt State API to MapReduce Application
    Master REST API. (Ryu Kobayashi via ozawa)

    MAPREDUCE-6364. Add a "Kill" link to Task Attempts page. (Ryu Kobayashi
    via ozawa)

    MAPREDUCE-6304. Specifying node labels when submitting MR jobs.
    (Naganarasimha G R via wangda)

    MAPREDUCE-6415. Create a tool to combine aggregated logs into HAR files.
    (Robert Kanter via kasha)

  IMPROVEMENTS

    MAPREDUCE-6471. Document distcp incremental copy
    (Neelesh Srinivas Salian via harsh)

    MAPREDUCE-5045. UtilTest#isCygwin method appears to be unused
    (Neelesh Srinivas Salian via harsh)

    MAPREDUCE-6291. Correct mapred queue usage command.
    (Brahma Reddu Battula via harsh)

    MAPREDUCE-579. Streaming "slowmatch" documentation. (harsh)

    MAPREDUCE-6287. Deprecated methods in org.apache.hadoop.examples.Sort
    (Chao Zhang via harsh)

    MAPREDUCE-5190. Unnecessary condition test in RandomSampler.
    (Jingguo Yao via harsh)

    MAPREDUCE-6239. Consolidate TestJobConf classes in
    hadoop-mapreduce-client-jobclient and hadoop-mapreduce-client-core
    (Varun Saxena via harsh)

    MAPREDUCE-5807. Print usage by TeraSort job. (Rohith via harsh)

    MAPREDUCE-4653. TestRandomAlgorithm has an unused "import" statement.
    (Amir Sanjar via harsh)

    MAPREDUCE-6100. replace "mapreduce.job.credentials.binary" with
    MRJobConfig.MAPREDUCE_JOB_CREDENTIALS_BINARY for better readability.
    (Zhihai Xu via harsh)
